# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = torchgeo
version = attr: torchgeo.__version__
author = Adam J. Stewart
author_email = ajstewart426@gmail.com
description = TorchGeo: datasets, transforms, and models for geospatial data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/torchgeo
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS
keywords = pytorch, deep learning, machine learning, remote sensing, satellite imagery, geospatial

[options]
install_requires =
    einops<0.5
    # fiona 1.5+ required for fiona.transform module
    fiona~=1.5
    # kornia 0.6.4+ required for kornia.contrib.compute_padding
    kornia>=0.6.4,<0.7
    matplotlib<4
    numpy<2
    # omegaconf 2.1+ required for to_object method
    omegaconf~=2.1
    # pillow 2.9+ required for height attribute
    pillow>=2.9,<10
    # pyproj 2.2+ required for CRS object
    pyproj>=2.2,<4
    # pytorch-lightning 1.3+ required for gradient_clip_algorithm argument to Trainer
    pytorch-lightning~=1.3
    # rasterio 1.0.16+ required for CRS support
    rasterio>=1.0.16,<2
    # rtree 0.9.4+ required for Index.get_size
    rtree>=0.9.4,<2
    # scikit-learn 0.18+ required for sklearn.model_selection module
    scikit-learn>=0.18,<2
    # segmentation-models-pytorch 0.2+ required for smp.losses module
    segmentation-models-pytorch>=0.2,<0.3
    # shapely 1.3+ required for Python 3 support
    shapely~=1.3
    # timm 0.2.1+ required for `features_only` option in create_model
    timm>=0.2.1,<0.5
    # torch 1.7+ required for typing
    torch~=1.7
    # torchmetrics 0.7+ required for JaccardIndex
    torchmetrics>=0.7,<0.10
    # torchvision 0.10+ required for torchvision.utils.draw_segmentation_masks
    torchvision>=0.10,<0.13
python_requires = ~= 3.7
packages = find:

[options.package_data]
torchgeo = py.typed

[options.packages.find]
include = torchgeo*

[options.extras_require]
datasets =
    h5py!=3.7.0,<4
    # laspy 2+ required for Python 3.7+ support
    laspy~=2.0
    # open3d 0.11.2+ required to avoid GLFW error:
    # https://github.com/isl-org/Open3D/issues/1550
    open3d>=0.11.2,<0.15;python_version<'3.10'
    opencv-python<5
    # pandas 0.23.2+ required for python 3.7 support
    pandas>=0.23.2,<2
    pycocotools<3
    # radiant-mlhub 0.2.1+ required for api_key bugfix:
    # https://github.com/radiantearth/radiant-mlhub/pull/48
    radiant-mlhub>=0.2.1,<0.6
    # rarfile 3+ required for correct Rar file detection
    rarfile>=3,<5
    # scipy 0.9+ required for scipy.io.wavfile.read
    scipy>=0.9,<2
    # zipfile-deflate64 0.2+ required for extraction bugfix:
    # https://github.com/brianhelba/zipfile-deflate64/issues/19
    zipfile-deflate64>=0.2,<0.3
docs =
    # ipywidgets 7+ required for nbsphinx
    ipywidgets~=7.0
    # nbsphinx 0.8.5 fixes bug with nbformat attributes
    nbsphinx~=0.8.5
    # release versions missing files, must install from master
    pytorch-sphinx-theme
    # sphinx 4+ required for autodoc_typehints_description_target = documented
    sphinx>=4,<6
style =
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<5
    # isort 5.8+ required for extend_skip option
    isort[colors]~=5.8
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]~=6.1
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<3
tests =
    # mypy 0.900+ required for pyproject.toml support
    mypy>=0.900,<=0.960
    # nbmake 0.1+ required to fix path_source bug
    nbmake>=0.1,<2
    # pytest 6+ required for pyproject.toml support
    pytest>=6,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<4

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # TorchGeo
    data/,
    logo/,
    logs/,
    output/,

    # Spack
    .spack-env/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,
