# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = torchgeo
version = attr: torchgeo.__version__
author = Adam J. Stewart
author_email = ajstewart426@gmail.com
description = TorchGeo: datasets, samplers, transforms, and pre-trained models for geospatial data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/torchgeo
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS
keywords = pytorch, deep learning, machine learning, remote sensing, satellite imagery, earth observation, geospatial

[options]
install_requires =
    # einops 0.3+ required for einops.repeat
    einops>=0.3,<0.7
    # fiona 1.8+ required for reading empty files
    fiona>=1.8,<2
    # kornia 0.6.4+ required for kornia.contrib.compute_padding
    kornia>=0.6.4,<0.7
    # matplotlib 3.3+ required for (H, W, 1) image support in plt.imshow
    matplotlib>=3.3,<4
    # numpy 1.17.2+ required by pytorch-lightning
    numpy>=1.17.2,<2
    # omegaconf 2.1+ required for to_object method
    omegaconf>=2.1,<3
    # packaging 17+ required by pytorch-lightning
    packaging>=17,<23
    # pillow 6.2+ required by matplotlib
    pillow>=6.2,<10
    # pyproj 2.2+ required for CRS object
    pyproj>=2.2,<4
    # pytorch-lightning 1.5.1+ required for apply_to_collection bugfix
    pytorch-lightning>=1.5.1,<2
    # rasterio 1.0.20+ required for out_dtype parameter of DatasetReaderBase.read
    rasterio>=1.0.20,<2
    # rtree 1+ required for len(index), index & index, index | index
    rtree>=1,<2
    # scikit-learn 0.21+ required to fix murmurhash3_32 import bug
    scikit-learn>=0.21,<2
    # segmentation-models-pytorch 0.2+ required for smp.losses module
    segmentation-models-pytorch>=0.2,<0.4
    # shapely 1.3+ required for Python 3 support
    shapely>=1.3,<2
    # timm 0.4.12 required by segmentation-models-pytorch
    timm>=0.4.12,<0.5
    # torch 1.9+ required by torchvision
    torch>=1.9,<2
    # torchmetrics 0.10+ required for binary/multiclass/multilabel classification metrics
    torchmetrics>=0.10,<0.12
    # torchvision 0.10+ required for torchvision.utils.draw_segmentation_masks
    torchvision>=0.10,<0.15
python_requires = ~= 3.7
packages = find:

[options.package_data]
torchgeo = py.typed

[options.packages.find]
include = torchgeo*

[options.extras_require]
datasets =
    # h5py 2.6+ required for bugfixes to HDF5 API
    h5py>=2.6,<4
    # laspy 2+ required for laspy.read
    laspy>=2,<3
    # open3d 0.11.2+ required to avoid GLFW error:
    # https://github.com/isl-org/Open3D/issues/1550
    open3d>=0.11.2,<0.15;python_version<'3.10'
    # opencv-python 3.4.2.17 is oldest buildable version on PyPI
    opencv-python>=3.4.2.17,<5
    # pandas 0.23.2+ required for Python 3.7 wheels
    pandas>=0.23.2,<2
    # pycocotools 2.0.0 is oldest version on PyPI
    pycocotools>=2,<3
    # radiant-mlhub 0.2.1+ required for api_key bugfix:
    # https://github.com/radiantearth/radiant-mlhub/pull/48
    # radiant-mlhub 0.5+ changed download behavior:
    # https://github.com/radiantearth/radiant-mlhub/pull/104
    radiant-mlhub>=0.2.1,<0.5
    # rarfile 3+ required for correct Rar file detection
    rarfile>=3,<5
    # scipy 1.2+ required to fix LinearNDInterpolator import bug
    scipy>=1.2,<2
    # zipfile-deflate64 0.2+ required for extraction bugfix:
    # https://github.com/brianhelba/zipfile-deflate64/issues/19
    zipfile-deflate64>=0.2,<0.3
docs =
    # ipywidgets 7+ required by nbsphinx
    ipywidgets>=7,<9
    # nbsphinx 0.8.5 fixes bug with nbformat attributes
    nbsphinx>=0.8.5,<0.9
    # release versions missing files, must install from master
    pytorch-sphinx-theme
    # sphinx 4+ required for autodoc_typehints_description_target = documented
    sphinx>=4,<6
style =
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<7
    # isort 5.8+ required for extend_skip option
    isort[colors]>=5.8,<6
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]>=6.1,<7
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<4
tests =
    # mypy 0.900+ required for pyproject.toml support
    mypy>=0.900,<0.992
    # nbmake 0.1+ required to fix path_source bug
    nbmake>=0.1,<2
    # pytest 6.1.2+ required by nbmake
    pytest>=6.1.2,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<5

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # TorchGeo
    data/,
    images/,
    logo/,
    logs/,
    output/,

    # Docs
    docs/src/,

    # Spack
    .spack-env/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,
